renamed picture, fixed styling on pictures to make text wrap around them

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,7 @@ body{
   max-height: 300px;
   animation: rubberBand;
   animation-duration: 1s;
+  margin-bottom: 20px;
 }
 
 
@@ -232,7 +233,7 @@ body{
   height:300px;
 }
 
-#introduction-picture p{
+#introduction-picture p, #elite-dangerous-graphics p, #menupic1 p, #menupic2 {
   text-align:center;
   margin: 0 auto;
 }
@@ -251,20 +252,23 @@ body{
   height: auto;
 }
 
-#elite-dangerous-graphics{
-    height: 300px;
+/*Picture Wrapper*/
+#elite-dangerous-graphics, #menupic1, #menupic2, #introduction-picture{
+  max-width: 100vw;
+  max-height: 300px;
+  object-fit: cover;
+  margin: 10px;
+  display:block;
 }
 
-#elite-dangerous-graphics p{
-  text-align:center;
-  margin: 0 auto;
-}
-
-#elite-pic{
+#elite-pic, #navigationmenu, #shipmenupic, #eliteoriginal{
+  max-height: 300px;
   height: 100%;
+  max-width: 500px;
   width: 100%;
-  background: url("https://golf-ladder-aqualate.net/assets/elite-dangerous-today.jpg") no-repeat center center;
-  background-size: 75% 90%;
+  display:  block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #scores{
@@ -369,17 +373,11 @@ body{
   color: #000;
 }
 
-#pic1, #pic2, #pic3, #menupic1{
+#pic1, #pic2, #pic3{
   margin-top: 10px;
   height: 300px;
 }
 
-
-#navresult, #navigationmenu{
-  width: 45%;
-  object-fit:cover;
-  display: inline-block;
-}
 #pic1img, #pic2img, #pic3img {
   height: 100%;
   width:100%;
